--- a/views/category_detail.hbs
+++ b/views/category_detail.hbs
@@ -9,13 +9,26 @@
       </ul>
     </div>
 
-    <ul>
-        {{#each data.category_item_list}}
-        <li>
-            <a href={{this.url}}>{{this.name}}</a>
-        </li>
-        {{/each}}
-    </ul>
+
+
+{{#each data.category_item_list}}
+<div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+  
+  <div class="card-header">{{this.name}}</div>
+    <div class="row g-0">      
+      <div class="col-md-4">
+        <img src="/images/mew.png" class="img-fluid rounded-start" alt="test image">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">[Flavor text]</h5>
+          <p class="card-text">{{this.description}}</p>
+          <a href={{this.url}} class="stretched-link"></a>
+        </div>
+      </div>
+    </div>
+</div>
+{{/each}}
 
   
 
