added item create and delete

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,3 +3,5 @@
 <h1>Welcome to the Armory!</h1>
 
 <h3>We have {{item_count}} items available!</h3>
+
+<a href='/inventory/item/create'><button class="btn btn-primary">Add item</button></a>
