--- a/views/item_detail.hbs
+++ b/views/item_detail.hbs
@@ -15,3 +15,7 @@
 </p>
 
 <button class="btn btn-primary">Add to cart</button>
+
+<div>
+<a href={{concat data.item.url '/delete'}}>Delete item</a>
+</div>
