added item update and category create

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,3 +5,5 @@
 <h3>We have {{item_count}} items available!</h3>
 
 <a href='/inventory/item/create'><button class="btn btn-primary">Add item</button></a>
+
+<a href='/inventory/category/create'><button class="btn btn-primary">Add category</button></a>
