--- a/views/item_detail.hbs
+++ b/views/item_detail.hbs
@@ -18,4 +18,6 @@
 
 <div>
 <a href={{concat data.item.url '/delete'}}>Delete item</a>
+<br>
+<a href={{concat data.item.url '/update'}}>Update item</a>
 </div>
