category delete and update added

--- a/views/category_detail.hbs
+++ b/views/category_detail.hbs
@@ -30,6 +30,9 @@
 </div>
 {{/each}}
 
-  
-
+<div>
+<a href={{concat data.category.url '/delete'}}>Delete category</a>
+<br>
+<a href={{concat data.category.url '/update'}}>Update category</a>
+</div>
     
