--- a/views/category_detail.hbs
+++ b/views/category_detail.hbs
@@ -17,7 +17,7 @@
   <div class="card-header">{{this.name}}</div>
     <div class="row g-0">      
       <div class="col-md-4">
-        <img src="/images/mew.png" class="img-fluid rounded-start" alt="test image">
+        <img src={{concat '/images/' this.image}} class="img-fluid rounded-start" alt="test image">
       </div>
       <div class="col-md-8">
         <div class="card-body">
