--- a/views/item_form.hbs
+++ b/views/item_form.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 
-<form method="POST" action="">
+<form method="POST" action="" enctype="multipart/form-data">
     <div class="form-group">
         <label for="name">Name:</label>
         <input id="name" class="form-control" type="text" placeholder="Name of item" name="name"  value="{{getFormValue item 'name'}}">
@@ -28,6 +28,9 @@
             {{/if}}
             {{/each}}
         </select>
+    </div>
+    <div class="form-group">
+        <input type="file" class="form-control-file" name="image">
     </div>
     
     <br>
