--- a/views/category_detail.hbs
+++ b/views/category_detail.hbs
@@ -17,11 +17,12 @@
   <div class="card-header">{{this.name}}</div>
     <div class="row g-0">      
       <div class="col-md-4">
-        <img src={{concat '/images/' this.image}} class="img-fluid rounded-start" alt="test image">
+        {{!-- <img src={{concat '/images/' this.image}} class="img-fluid rounded-start" alt="test image"> --}}
+        <img src="data:{{this.img.mimetype}};base64, {{toString this.img.file}}" class="img-fluid rounded-start" alt="test image" style="width:150px">
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">[Flavor text]</h5>
+          
           <p class="card-text">{{this.description}}</p>
           <a href={{this.url}} class="stretched-link"></a>
         </div>
