--- a/views/item_form.hbs
+++ b/views/item_form.hbs
@@ -29,9 +29,14 @@
             {{/each}}
         </select>
     </div>
+           
     <div class="form-group">
-        <input type="file" class="form-control-file" name="image">
+        <label for="image">Image:</label>
+        <div>
+        <input id="image" type="file" class="form-control-file" name="image">
+        </div>
     </div>
+    
     
     <br>
     <button class="btn btn-primary" type="submit">Submit</button>
