added password to create and update

--- a/views/category_form.hbs
+++ b/views/category_form.hbs
@@ -9,7 +9,10 @@
         <label for="description">Description:</label>
         <input id="description" class="form-control" type="text" placeholder="Description of category" name="description" value="{{getFormValue category 'description'}}">
     </div>
-    
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <input id="password" class="form-control" type="password" placeholder="Enter password" name="password">
+    </div>
     
     <br>
     <button class="btn btn-primary" type="submit">Submit</button>
