--- a/views/item_form.hbs
+++ b/views/item_form.hbs
@@ -36,6 +36,10 @@
         <input id="image" type="file" class="form-control-file" name="image">
         </div>
     </div>
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <input id="password" class="form-control" type="password" placeholder="Enter password" name="password">
+    </div>
     
     
     <br>
